--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "jade": "~1.11.0",
     "mercator-projection": "0.0.2",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
-    "web3": "^1.0.0-beta.26"
+    "serve-favicon": "~2.4.5"
   }
 }
