--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ethereumjs-abi": "^0.6.5",
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
+    "formidable": "^1.1.1",
     "i18n": "^0.8.3",
     "jade": "~1.11.0",
     "mercator-projection": "0.0.2",
