--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "bootstrap-fileinput": "^4.4.6"
+    "bootstrap-fileinput": "^4.4.6",
+    "remarkable-bootstrap-notify": "^3.1.3"
   }
 }
