--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ethereumjs-abi": "^0.6.5",
+    "ethereumjs-util": "^5.1.2",
+    "ethjs-util": "^0.1.4",
     "express": "~4.15.5",
     "express-handlebars": "^3.0.0",
     "formidable": "^1.1.1",
     "i18n": "^0.8.3",
     "mercator-projection": "0.0.2",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "web3": "^1.0.0-beta.26"
   }
 }
