--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^3.0.0",
     "formidable": "^1.1.1",
     "i18n": "^0.8.3",
+    "jsonfile": "^4.0.0",
     "mercator-projection": "0.0.2",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
