--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www development",
+    "prod": "node ./bin/www production"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
