--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "web3": "^1.0.0-beta.27"
+    "web3": "^1.0.0-beta.27",
+    "log4js": "2.4.1"
   }
 }
