--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "type": "node",
-        "request": "attach",
-        "name": "Attach",
-        "port": 9229
-    },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Delete grid",
+            "program": "${workspaceFolder}/admin/grid_avatar_delete.js"
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach",
+            "port": 9229
+        },
         {
             "type": "node",
             "request": "launch",
