--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^3.0.0",
     "formidable": "^1.1.1",
     "i18n": "^0.8.3",
+    "inquirer": "^4.0.1",
     "jsonfile": "^4.0.0",
     "mercator-projection": "0.0.2",
     "mongodb": "^3.0.1",
