--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "i18n": "^0.8.3",
     "inquirer": "^4.0.1",
     "jsonfile": "^4.0.0",
+    "log4js": "2.4.1",
     "mercator-projection": "0.0.2",
     "mongodb": "^3.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
-    "web3": "^1.0.0-beta.27",
-    "log4js": "2.4.1"
+    "web3": "^0.20.1"
   }
 }
